# llm-strings

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
src/: source.py
src/llm_strings/: __init__.py
tests/: test_source.py
